Fix right col alignment

--- a/assets/demo.css
+++ b/assets/demo.css
@@ -27,7 +27,9 @@ custom CSS can be added below.
 }
 
 .tab-content-wrapper > div {
-    height: calc(50vh - var(--banner-height)/2);
+    display: flex;
+    flex-direction: column;
+    height: 50%;
     margin: 1rem;
 }
 
